--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-strict-di>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Just Khelo</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/app.css" rel="stylesheet">
 </head>
 <body>
 
-<h1>Hello, world!</h1>
+<div ng-view></div>
 
 <% if(isHybridApp) { %>
 <script type="text/javascript" src="cordova.js"></script>
 <% } %>
-
 <% if(isProduction) { %>
 <script type="text/javascript" src="app.js"></script>
 <% } else { %>
