--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -4,12 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <base href="http://localhost:9000/">
     <title>Just Khelo</title>
     <link href="assets/css/app.css" rel="stylesheet">
 </head>
 <body>
+
 <header ng-include="'app/shared/header/header.tpl.html'"></header>
-<section id="mainSection" ng-view></section>
+<section id="mainSection" ng-view ng-cloak></section>
 <footer ng-include="'app/shared/footer/footer.tpl.html'"></footer>
 
 <% if(isProduction) { %>
