Updated manage account page

--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -8,7 +8,7 @@
     <title>Just Khelo</title>
     <link href="assets/css/app.css" rel="stylesheet">
 </head>
-<body>
+<body ng-cloak>
 
 <header ng-include="'app/shared/header/header.tpl.html'"></header>
 <section id="mainSection" ng-view ng-cloak autoscroll="true"></section>
