--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -8,10 +8,10 @@
     <title>Just Khelo</title>
     <link href="assets/css/app.css" rel="stylesheet">
 </head>
-<body ng-cloak>
+<body>
 
 <header ng-include="'app/shared/header/header.tpl.html'"></header>
-<section id="mainSection" ng-view ng-cloak autoscroll="true"></section>
+<section id="mainSection" ng-view ng-cloak autoscroll="true" ng-cloak></section>
 <footer ng-include="'app/shared/footer/footer.tpl.html'"></footer>
 
 <% if(isProduction) { %>
