--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -11,7 +11,6 @@
     <% } else { %>
     <base href="http://localhost:9000/">
     <% } %>
-
     <title>Just Khelo</title>
     <link href="assets/css/app.css" rel="stylesheet">
 </head>
@@ -21,7 +20,7 @@
 <section id="mainSection" ng-view ng-cloak autoscroll="true" ng-cloak></section>
 <footer ng-include="'app/shared/footer/footer.tpl.html'"></footer>
 
-<% if(isProduction) { %>
+<% if(isProduction || isDist) { %>
 <script type="text/javascript" src="app.js"></script>
 <% } else { %>
 <script type="text/javascript" src="vendor/require/require.js" data-main="app/main"></script>
