--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <% if(isProduction) { %>
-    <base href="http://www.justkhelo.com/">
+    <base href="https://justkhelo.herokuapp.com/">
     <% } else if(isStaging) { %>
     <base href="http://justkhelo.herokuapp.com/">
     <% } else { %>
